<resources>
    <string name="app_name">FitnessZone</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App de FitnessZone</string>
    <string name="nav_header_subtitle">Carlos Antonio CL || Roberto RD</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Widget de las últimas noticias de FitnessZone</string>
    <string name="menu_localizacion">Localizacion</string>
    <string name="menu_reserva">Reserva</string>
    <string name="menu_salas">Salas</string>
    <string name="Pilates">Pilates</string>
    <string name="nombre_pagina">FITNESS ZONE</string>
    <string name="informacionPag">La mejor app de reserva de salas</string>
    <string name="nombre_programadores">Roberto Rivero Díaz\nCarlos Antonio Cortès Lora</string>
    <string name="Materiales">Materiales</string>
    <string name="Descripcion">Descripcion</string>
    <string name="tituloSala">Titulo</string>
    <string name="Cantidad">Capacidad</string>
    <string name="Precio">Precio</string>
    <string name="textoBoton">Descargar PDF</string>
    <string name="Imagen">Imagen</string>
    <string name="Capacidad">Capacidad</string>
    <string name="BotonReserva">Nueva Reserva</string>
    <string name="textoSala">Sala:</string>
    <string name="textoFecha">Fecha:</string>
    <string name="textoHora">Hora:</string>
    <string name="textoCancelar">Cancelar reserva</string>
    <string name="textoModificar">Modificar Reserva</string>
    <string name="textoUsuario">Usuario:</string>
    <string name="textoNickname">Nickname</string>
    <string name="textoVer">Ver Reserva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textoNicknamePost">Nickname</string>
    <string name="textoNumCarnetPost">Numero Carnet</string>
    <string name="textoTelefonoPost">Telefono</string>
    <string name="textoEmailPost">Email</string>
    <string name="textoFechaPost">Fecha:</string>
    <string name="textoHoraPost">Hora:</string>
    <string name="post">Enviar Reserva</string>
    <string name="textoComentarioPost">Comentario</string>
    <string name="textoNumPersPost">Numero de personas</string>
    <string name="menu_alta">Realizar Reserva</string>
    <string name="textoSalaPost">Sala:</string>
    <string name="seleccionarSala">Seleccionar Sala</string>
    <string name="seleccionar_fecha">Seleccionar Fecha</string>
    <string name="seleccionar_hora">Seleccionar Hora</string>
    <string name="textoAlta">Reservar Sala\n</string>
    <string name="menu_Ver">Ver Reserva</string>
    <string name="cancelar">Cancelar</string>
    <string name="modificar">Modificar</string>
    <string name="texto_ubicacion">Nos encontramos en Av. Universidad de Cádiz, 10, 11519 Puerto Real, Cádiz. Somos una empresa alojada en el campus de Puerto Real de la Universidad de Cádiz perteneciente a la misma población, cerca del Parque Natual Los Toruños y del Río San Pedro.</string>
    <string name="texto_bus">Puedes llegar fácilmente a nuestras instalaciones en autobús, ya que contamos con paradas de transporte público convenientemente ubicadas cerca. Queremos facilitar tu acceso, proporcionándote opciones de transporte sostenible y accesible.</string>
    <string name="text_tren">Además, para mayor comodidad, contamos con una estación de tren en las proximidades, brindándote una opción adicional para llegar a nuestras instalaciones.</string>
    <string name="button_bus">Acceder a los horarios del bus\n</string>
    <string name="button_tren">Acceder a los horarios del tren\n</string>
    <string name="texto_como_llegar">¿Cómo llegar?</string>
    <string name="menu_Modificar">Modificar Reserva</string>
    <string name="textoNickname2">Nickname:</string>
</resources>