<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.reserva.AltaFragment">


    <TextView
        android:id="@+id/modificartextNickname"
        android:layout_width="379dp"
        android:layout_height="31dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="16dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/textoAlta"
        android:textColor="@color/naranja"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinnerSala"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificartextNickname" />

    <EditText
        android:id="@+id/modificarNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:inputType="textPersonName"
        android:hint="@string/textoNicknamePost"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSala" />

    <EditText
        android:id="@+id/modificarNumCarnet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:inputType="number"
        android:hint="@string/textoNumCarnetPost"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarNickname" />


    <EditText
        android:id="@+id/modificarTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:inputType="number"
        android:hint="@string/textoTelefonoPost"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarNumCarnet" />

    <EditText
        android:id="@+id/modificarEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:inputType="textEmailAddress"
        android:hint="@string/textoEmailPost"
        android:textColorHint ="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarTelefono" />

    <Button
        android:id="@+id/buttonSeleccionarFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:hint="@string/seleccionar_fecha"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarEmail" />

    <Button
        android:id="@+id/buttonSeleccionarHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:hint="@string/seleccionar_hora"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeleccionarFecha" />

    <EditText
        android:id="@+id/modificarNumPers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:inputType="number"
        android:hint="@string/textoNumPersPost"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeleccionarHora" />

    <EditText
        android:id="@+id/modificarComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:inputType="text"
        android:hint="@string/textoComentarioPost"
        android:layout_margin="16dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarNumPers" />

    <Button
        android:id="@+id/buttonPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:padding="10dp"
        android:text="@string/post"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modificarComentario" />

    <TextView
        android:id="@+id/modificarResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPost"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
