<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/cardViewReserva"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="8dp"
app:cardCornerRadius="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textoNickname2"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/textNickname"
            android:text="@string/textoNickname"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewSala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNickname"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textoSala"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewSala"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textoFecha"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFecha"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/textoHora"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/buttonVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="80dp"
            android:text="@string/textoVer"
            android:textColor="@color/white" />
    </RelativeLayout>
</LinearLayout>
</androidx.cardview.widget.CardView>