<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/cardView"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="8dp"
app:cardCornerRadius="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gris"
        android:padding="16dp">

        <TextView
            android:id="@+id/tituloSala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tituloSala"
            android:textColor="@color/naranja"
            android:background="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewImagen"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/tituloSala"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="15dp"
            android:text="@string/Imagen"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageViewImagen"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Descripcion"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textViewMateriales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDescripcion"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Materiales"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- Agregar un TableLayout para mostrar los datos en formato de tabla -->
        <TableLayout
            android:id="@+id/tabla"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewMateriales"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Capacidad"
                    android:textColor="@color/black"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCantidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Precio"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/buttonDescargarPDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tabla"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:text="@string/textoBoton"
            android:textColor="@color/white" />
    </RelativeLayout>


</LinearLayout>
</androidx.cardview.widget.CardView>