<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.localizacion.LocalizacionFragment">


        <TextView
            android:id="@+id/text_slideshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_slideshow"
            map:cameraZoom="13"
            map:mapType="hybrid"
            map:uiZoomControls="true" />

        <TextView
            android:id="@+id/text_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gris"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="@string/texto_ubicacion"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/gris"
            android:src="@mipmap/gym"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_ubicacion" />


        <TextView
            android:id="@+id/text_como_llegar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp"
            android:text="@string/texto_como_llegar"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/naranja"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/text_como_llegar"
            tools:context=".ui.localizacion.LocalizacionFragment">

            <!-- Resto de tus vistas -->

            <TextView
                android:id="@+id/tex_bus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gris"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:text="@string/texto_bus"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_bus"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/button_bus"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_tren" />


            <TextView
                android:id="@+id/text_tren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gris"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"
                android:text="@string/text_tren"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_tren"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:text="@string/button_tren"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_tren" />


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>